2011-12-12  Simon Hausmann  <simon.hausmann@nokia.com>

        Unreviewed build fix.

        Add missing files from https://bugs.webkit.org/show_bug.cgi?id=73016

        * UIProcess/API/qt/qwebnavigationhistory.cpp: Added.
        (QWebNavigationListModelPrivate::QWebNavigationListModelPrivate):
        (QWebNavigationListModelPrivate::createWebNavigationModel):
        (QWebNavigationHistoryPrivate::QWebNavigationHistoryPrivate):
        (QWebNavigationHistoryPrivate::createHistory):
        (QWebNavigationHistoryPrivate::reset):
        (QWebNavigationHistoryPrivate::goBackTo):
        (QWebNavigationHistoryPrivate::goForwardTo):
        (QWebNavigationListModel::QWebNavigationListModel):
        (QWebNavigationListModel::~QWebNavigationListModel):
        (QWebNavigationListModel::rowCount):
        (QWebNavigationListModel::data):
        (QWebNavigationHistory::QWebNavigationHistory):
        (QWebNavigationHistory::~QWebNavigationHistory):
        (QWebNavigationHistory::backItems):
        (QWebNavigationHistory::forwardItems):
        * UIProcess/API/qt/qwebnavigationhistory_p.h: Added.
        * UIProcess/API/qt/qwebnavigationhistory_p_p.h: Added.

2011-12-12  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Move postMessage/messageReceived APIS to experimental

        Reviewed by Tor Arne Vestbø.

        * UIProcess/API/qt/qquickwebview.cpp:
        (QQuickWebViewPrivate::setPageProxy):
        (QQuickWebViewExperimental::QQuickWebViewExperimental):
        (QQuickWebViewExperimental::postMessage):
        * UIProcess/API/qt/qquickwebview_p.h:
        * UIProcess/API/qt/tests/qmltests/DesktopBehavior/tst_messaging.qml:

2011-12-12  Alexis Menard  <alexis.menard@openbossa.org>

        [Qt][WK2] History is not accessible in QML.
        https://bugs.webkit.org/show_bug.cgi?id=73016

        Reviewed by Simon Hausmann.

        Remove the old qwkhistory and create QWebNavigationHistory which is QML